main: fix email address contrast in small screens

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -388,7 +388,7 @@ body {
 		width: 100%;
 
 		a {
-			color: #fff;
+			color: #fdfdff;
 			text-decoration: none;
 		}
 
